--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/AA.jpg" height="200" alt="Alen's profile picture"></td>
+      <td><img src="AA.jpg" height="200" alt="Alen's profile picture"></td>
       <td>
         <h1>Alen Sahinpasic</h1>
         <p><em><strong>Student of <a href="http://www.gssst.edu.ba/">GSSST</a></strong>.</em></p>
