--- a/index.html
+++ b/index.html
@@ -4,6 +4,29 @@
 <head>
   <meta charset="utf-8">
   <title>Alen's personal site</title>
+  
+  
+  <style media="screen">
+
+  body {
+  background-color: #f3f9fb;
+  }
+
+  hr{
+
+border-style: none;
+border-top-style: dotted;
+border-color: grey;
+border-width: 5px;
+width: 5%
+
+
+  }
+
+</style>
+
+  
+  
 </head>
 
 <body>
