--- a/My hobbies.html
+++ b/My hobbies.html
@@ -4,6 +4,25 @@
 <head>
   <meta charset="utf-8">
   <title>My Hobbies</title>
+  <style media="screen">
+  
+    body {
+    background-color: #f3f9fb;
+    }
+  
+    hr{
+  
+  border-style: none;
+  border-top-style: dotted;
+  border-color: grey;
+  border-width: 5px;
+  width: 5%
+  
+  
+    }
+  
+  </style>
+  
 </head>
 
 <body>
